--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "sequelize": "^5.9.0",
+    "sequelize-cli": "^5.5.0",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
